install(PROGRAMS
  ${CMAKE_CURRENT_SOURCE_DIR}/nuis_genev_neut 
  ${CMAKE_CURRENT_SOURCE_DIR}/nuis_genev_genie 
  ${CMAKE_CURRENT_SOURCE_DIR}/nuis_get_flux_descriptor
  ${CMAKE_CURRENT_SOURCE_DIR}/nuis_get_NEUT_target_descriptor
  ${CMAKE_CURRENT_SOURCE_DIR}/nuis_get_GENIE_target_descriptor
  DESTINATION bin)